--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction to Economic Theory</h3>
 <p>According to Keynsian Economics, there are three main ways a government can stabilize an economy during a recession. One way is to decrease interest rates. This allows easier borrowing for businesses and therefore creates more jobs. The second way a government can increase jobs is by decreasing taxes. This is based on the same idea that additional money in the hands of citizens will allow for more businesses to stay open. The third main way a government can stabilize a recession is by increasing spending to again put more money in the hands of citezens. </p>
 <p> <img src="heatmap.png" class="img-responsive" alt=""> </div></p>
- 
+<p> We can notice a couple of basic correlations on the prelininary heatmap. For example, we can see that obviously the more farming an economy has, the less service employees the country has. Then we will start to notice other things like the higher the  minimum wage, the more energy costs. We can see that the interest, taxes, and unemployment before the recession are corrolated to those variables during the recession. The corrolations to unemployment are:</p>
+<p> <img src="heated.png" class="img-responsive" alt=""> </div></p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
